Fix spacing on follows you indicator
Minor but annoying me

--- a/packages/web/src/pages/profile-page/components/desktop/ProfilePage.module.css
+++ b/packages/web/src/pages/profile-page/components/desktop/ProfilePage.module.css
@@ -30,7 +30,7 @@
 
 .nameWrapper {
   position: relative;
-  margin: 4px 0 0 32px;
+  margin-left: 32px;
   text-align: left;
   user-select: none;
   max-width: 720px;
